# todo-app-python

./: .gitignore  .pre-commit-config.yaml  database.py  main.py  model.py  pyproject.toml
