[tool.poetry]
name = "todo-app-python"
version = "0.1.0"
description = ""
authors = ["Sarah Pak <suji.pak93@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_app_python"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pre-commit = "^2.21.0"
rich = "^13.1.0"
typer = "^0.7.0"
black = {extras = ["d"], version = "^22.12.0"}
flake8 = "^6.0.0"
mypy = "^0.991"
pyre-check = "^0.9.17"
isort = "^5.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
